Plot: rename nav label; download plots as PDF

--- a/templates/index.html
+++ b/templates/index.html
@@ -388,7 +388,7 @@
         <span id="titleText">Compass Rose - Live Mode</span>
         <span style="float: right; font-weight: 700;">
           <a href="/" style="color: inherit; text-decoration: underline; margin-right: 10px;">Monitor</a>
-          <a href="/plotter" id="plotterLink" style="color: inherit; text-decoration: underline;">Graficador</a>
+          <a href="/plotter" id="plotterLink" style="color: inherit; text-decoration: underline;">Plot</a>
           <a href="#" id="openConfig" style="color: inherit; text-decoration: underline; margin-left: 10px; display: none;">Config</a>
         </span>
       </div>
